--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -69,7 +69,7 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".models.WeatherListActivity"
+        <activity android:name=".WeatherListActivity"
             android:label="WeatherList"
             android:parentActivityName=".MapsActivity"
             android:theme="@style/AppTheme.NoActionBar">
@@ -78,7 +78,13 @@
                 android:value="com.example.safetravelsclient.MapsActivity"/>
         </activity>
 
-
+        <activity android:name=".InDepthViewActivity"
+            android:parentActivityName=".MapsActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.safetravelsclient.MapsActivity"/>
+        </activity>
     </application>
 
 </manifest>
