--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,11 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.safetravelsclient">
 
-    <!--
-         The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
-         Google Maps Android API v2, but you must specify either coarse or fine
-         location permissions for the 'MyLocation' functionality.
-    -->
+
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
@@ -20,42 +16,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        >
+        tools:ignore="LockedOrientationActivity"  >
 
 
-        <!--
-        <activity
-            android:name=".models.LandingActivity"
-            android:label="@string/title_activity_landing_activity"
-            android:theme="@style/AppTheme"></activity>
-        -->
-        <!-- 
-    <activity android:name="com.example.safetravelsclient.models.LandingActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-
-        <activity
-            android:name=".ProductsListingActivity"
-            android:label="@string/title_activity_products_listing"
-            android:parentActivityName=".LandingActivity"
-            android:theme="@style/AppTheme.NoActionBar">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="edu.uark.uarkregisterapp.LandingActivity" />
-        </activity>
-        -->
-
-        <!--
-             The API key for Google Maps-based APIs is defined as a string resource.
-             (See the file "res/values/google_maps_api.xml").
-             Note that the API key is linked to the encryption key used to sign the APK.
-             You need a different API key for each encryption key, including the release key that is used to
-             sign the APK for publishing.
-             You can define the keys for the debug and release targets in src/debug/ and src/release/.
-        -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
@@ -63,6 +26,7 @@
         <activity
             android:name=".MapsActivity"
             android:label="@string/title_activity_maps"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -73,6 +37,7 @@
         <activity android:name=".WeatherListActivity"
             android:label="WeatherList"
             android:parentActivityName=".MapsActivity"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
@@ -81,6 +46,7 @@
 
         <activity android:name=".InDepthViewActivity"
             android:label="InDepthView"
+            android:screenOrientation="portrait"
             android:parentActivityName=".WeatherListActivity"
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
